k8s/gpc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echohostname
spec:
  selector:
    matchLabels:
      app: echohostname
  template:
    spec:
      containers:
        - name: echohostname
          image: barankaraaslan/echohostname
          imagePullPolicy: Always
