k8s/gpc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echohostname
spec:
  defaultBackend:
    service:
      name: echohostname
      port:
        number: 80
